adjust icon searchBar

--- a/weather.html
+++ b/weather.html
@@ -5,7 +5,7 @@
 	<script src="weather.js"></script>
 	<link rel="stylesheet" type="text/css" href="weather.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
 		<div class="searchbar">
 			<input class="searchText" type="text" name="" placeholder="Enter your zip">
 			<a class="searchBtn" href="#">
-				<i class="fas fa-search-location" id="searchIcon"></i>
+				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
 			</a>
 		</div>
 	</div>
