--- a/weather.html
+++ b/weather.html
@@ -14,7 +14,7 @@
 		<span class="text2">Enter your Zip</span>
 		<div class="searchbar">
 			<input class="searchText" type="text" name="" placeholder="Enter your zip">
-			<a class="searchBtn" href="#">
+			<button class="searchBtn" type="button" id="search_button" onclick="loadWeatherAjax()">
 				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
 			</a>
 		</div>
