if zip exists, reveal weather page

--- a/weather.html
+++ b/weather.html
@@ -19,7 +19,7 @@
 			</a>
 		</div>
 	</div>
-	<div class="mainWrapper">
+	<div class="mainWrapper" id="main">
 		<!--Section 1 : Background image changes by weather-->
 		<div class="bg_image">
 		</div>
