fix error vor pulling zip and border color

--- a/weather.html
+++ b/weather.html
@@ -13,7 +13,7 @@
 		<span class="text1">Welcome to Weather App</span>
 		<span class="text2">Enter your Zip</span>
 		<div class="searchbar">
-			<input class="searchText" type="text" name="" placeholder="Enter your zip">
+			<input class="searchText" type="text"  placeholder="Enter your zip">
 			<button class="searchBtn" type="button" id="search_button" onclick="loadWeatherAjax()">
 				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
 			</a>
