--- a/weather.html
+++ b/weather.html
@@ -16,7 +16,7 @@
 			<input id="searchText" type="text"  placeholder="Enter your zip">
 			<button class="searchBtn" type="button" id="search_button" onclick="loadWeatherAjax()">
 				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
-			</a>
+			</button>
 		</div>
 	</div>
 	<div class="mainWrapper" id="main">
