refactoring code for js

--- a/weather.html
+++ b/weather.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sheri Hansen Weather App</title>
 	
-	<link rel="stylesheet" type="text/css" href="weather.css">
+	<link rel="stylesheet" type="text/css" href="weatherApp.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
@@ -28,7 +28,7 @@
 			<input id="inputLocation" type="text">
 			<button id="newLocation">Change Location</button>
 		</div>
-		<!--Section 3: DISPLAY-->
+		<!--Section 3: DISPLAY WEATHER-->
 	
 		<div class="mainContainer">
 			<div class="theCard">
@@ -225,6 +225,6 @@
 
 		</div>
 	</div>
-	<script src="weather.js"></script>
+	<script src="weatherApp.js"></script>
 </body>
 </html>
