name change on html main search bar

--- a/weather.html
+++ b/weather.html
@@ -24,7 +24,7 @@
 		<div class="bg_image">
 		</div>
 		<!-- Section 2: Change location - header section-->
-		<div class="searchbar">
+		<div class="main_searchbar">
 			<input id="main_searchText" type="text"  placeholder="Enter your zip" required>
 			<button class="searchBtn" type="button" id="main_search_button" onclick="loadWeatherAjax(document.getElementById('main_searchText').value)">
 				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
