--- a/weather.html
+++ b/weather.html
@@ -25,7 +25,7 @@
 		</div>
 		<!-- Section 2: Change location - header section-->
 		<div class="main_searchbar">
-			<input id="main_searchText" type="text"  placeholder="Enter your zip" required>
+			<input id="main_searchText" type="text"  placeholder="Search a different zip" required>
 			<button class="searchBtn" type="button" id="main_search_button" onclick="loadWeatherAjax(document.getElementById('main_searchText').value)">
 				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
 			</button>
