rmv default text and style 5day cards

--- a/weather.html
+++ b/weather.html
@@ -35,8 +35,8 @@
 		<div class="mainContainer">
 			<div class="theCard">
 				<div class="theFront" >
-					<h3 id="location">Your location is: </h3>
-					<h5 id="timeAndDate">Your Time and Date</h5>
+					<h3 id="location"> </h3>
+					<h5 id="timeAndDate"></h5>
 					<h1 id="currentTemp"></h1>	
 				</div>
 				<div class="theBack">
