rmv back card items

--- a/weather.html
+++ b/weather.html
@@ -92,7 +92,7 @@
 					<div class="icon" id="iconDay1"></div>
 					<div class="temp" id="tempDay1"></div>	
 				</div>
-				<div class="theBackFive" id="backDay1">
+				<!--<div class="theBackFive" id="backDay1">
 					<div class="tempDetails">
 						<table>
 							<tr>
@@ -113,7 +113,7 @@
 							</tr>
 						</table>
 					</div>
-				</div>
+				</div>-->
 			</div>
 			<div class="fiveDayCard">
 				<div class="theFrontFive" id="day2">
@@ -121,56 +121,12 @@
 					<div class="icon" id="iconDay2"></div>
 					<div class="temp" id="tempDay2"></div>	
 				</div>
-				<div class="theBackFive" id="backDay2">
-					<div class="tempDetails">
-						<table>
-							<tr>
-								<td>Temperature:</td>
-								<td id="backTempDay2"></td>
-							</tr>
-							<tr>
-								<td>Humidity:</td>
-								<td id="humidityDay2"></td>
-							</tr>
-							<tr>
-								<td>Min Temp:</td>
-								<td id="minTempDay2"></td>
-							</tr>
-							<tr>
-								<td>Max Temp:</td>
-								<td id="maxTempDay2"></td>
-							</tr>
-						</table>
-					</div>
-				</div>
-			</div>
+				
 			<div class="fiveDayCard">
 				<div class="theFrontFive" id="day3">
 					<div class="date" id="dateDay3"></div>
 					<div class="icon" id="iconDay3"></div>
 					<div class="temp" id="tempDay3"></div>	
-				</div>
-				<div class="theBackFive" id="backDay3">
-					<div class="tempDetails">
-						<table>
-							<tr>
-								<td>Temperature:</td>
-								<td id="backTempDay3"></td>
-							</tr>
-							<tr>
-								<td>Humidity:</td>
-								<td id="humidityDay3"></td>
-							</tr>
-							<tr>
-								<td>Min Temp:</td>
-								<td id="minTempDay3"></td>
-							</tr>
-							<tr>
-								<td>Max Temp:</td>
-								<td id="maxTempDay3"></td>
-							</tr>
-						</table>
-					</div>
 				</div>
 			</div>
 			<div class="fiveDayCard">
@@ -179,56 +135,12 @@
 					<div class="icon" id="iconDay4"></div>
 					<div class="temp" id="tempDay4"></div>	
 				</div>
-				<div class="theBackFive" id="backDay4">
-					<div class="tempDetails">
-						<table>
-							<tr>
-								<td>Temperature:</td>
-								<td id="backTempDay4"></td>
-							</tr>
-							<tr>
-								<td>Humidity:</td>
-								<td id="humidityDay4"></td>
-							</tr>
-							<tr>
-								<td>Min Temp:</td>
-								<td id="minTempDay4"></td>
-							</tr>
-							<tr>
-								<td>Max Temp:</td>
-								<td id="maxTempDay4"></td>
-							</tr>
-						</table>
-					</div>
-				</div>
 			</div>
 			<div class="fiveDayCard">
 				<div class="theFrontFive" id="day5">
 					<div class="date" id="dateDay5"></div>
 					<div class="icon" id="iconDay5"></div>
 					<div class="temp" id="tempDay5"></div>	
-				</div>
-				<div class="theBackFive" id="backDay5">
-					<div class="tempDetails">
-						<table>
-							<tr>
-								<td>Temperature:</td>
-								<td id="backTempDay5"></td>
-							</tr>
-							<tr>
-								<td>Humidity:</td>
-								<td id="humidityDay5"></td>
-							</tr>
-							<tr>
-								<td>Min Temp:</td>
-								<td id="minTempDay5"></td>
-							</tr>
-							<tr>
-								<td>Max Temp:</td>
-								<td id="maxTempDay5"></td>
-							</tr>
-						</table>
-					</div>
 				</div>
 			</div>
 			
