--- a/weather.html
+++ b/weather.html
@@ -121,7 +121,7 @@
 					<div class="icon" id="iconDay2"></div>
 					<div class="temp" id="tempDay2"></div>	
 				</div>
-				
+			</div>
 			<div class="fiveDayCard">
 				<div class="theFrontFive" id="day3">
 					<div class="date" id="dateDay3"></div>
