--- a/weather.html
+++ b/weather.html
@@ -6,9 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="weatherApp.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+	<div id="bg">
 	<div class="intro" id="welcome">
 		<span class="text1">Welcome to Weather App</span>
 		<span class="text2">Enter your Zip</span>
@@ -147,6 +148,7 @@
 
 		</div>
 	</div>
+</div>
 	<script src="weatherApp.js"></script>
 </body>
 </html>
