Add weather animations

--- a/weather.html
+++ b/weather.html
@@ -4,6 +4,7 @@
 	<title>Sheri Hansen Weather App</title>
 	
 	<link rel="stylesheet" type="text/css" href="weatherApp.css">
+	<link rel="stylesheet" type="text/css" href="weatherAnimations.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
