--- a/weather.html
+++ b/weather.html
@@ -15,7 +15,7 @@
 		<span class="text1">Welcome to Weather App</span>
 		<span class="text2">Enter your Zip</span>
 		<div class="searchbar">
-			<input id="searchText" type="text"  placeholder="Enter your zip" required>
+			<input id="searchText" type="text" required>
 			<button class="searchBtn" type="button" id="search_button" onclick="loadWeatherAjax(document.getElementById('searchText').value)">
 				<i class="fas fa-search-location fa-2x" id="searchIcon"></i>
 			</button>
